# PetShelf

./: .gitignore  README.md  build-exe.bat  build-macos.bat  build-macos.command  pyproject.toml  release.bat  requirements-dev.txt  requirements.txt  run_pet_shelf.py
.github/workflows/: release.yml
docs/: UPDATES.md
pet_shelf/: __init__.py  app.py  editor.py  models.py  petdex.py  ui.py  updater.py
pets/_runs/charizard-20260714/: imagegen-jobs.json  pet_request.json
pets/_runs/charizard-20260714/final/: spritesheet-ball-hit.json  validation-ball-hit.json  validation-extended.json
pets/_runs/charizard-20260714/frames/: frames-manifest.json
pets/_runs/charizard-20260714/prompts/: base-pet.md  look-cardinals.md
pets/_runs/charizard-20260714/qa/: cardinal-anchors.json  chroma-despill-extended.json  direction-blind-answer-key.json  look-continuity.json  look-mechanics.md  review.json
pets/_runs/charizard-20260714/scripts/: build_ball_hit_composite.py
pets/_runs/charizard-reference-20260714/: BASIC_FALLBACK.md  build_basic_pet.py  imagegen-jobs.json  pet_request.json
pets/_runs/charizard-reference-20260714/final/: validation-basic-png.json  (+1 more)
pets/akaza/: pet.json
pets/giyu-demonslayer/: pet.json
pets/gyomei-demonslayer/: pet.json
pets/itachi/: pet.json
pets/pain/: pet.json
pets/sanemi-demonslayer/: pet.json
pets/sprigatito/: pet.json
scripts/: build_macos.sh  build_windows.ps1  build_windows_release.ps1  make_app_icon.py  make_sample_pets.py  release.ps1
tests/: test_editor.py  test_models.py  test_petdex.py  test_ui_logic.py  test_updater.py
(+72 files in other folders)
